add legal and new images reel

--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -3,15 +3,15 @@
     .sam__firstWin.hide
       .sam__firstWin-info
         .sam__firstWin-title Алоха, ти виграв#[br] фріспіни
-        .sam__firstWin-sum 150 FS
+        .sam__firstWin-sum 100 FS
         .sam__firstWin-try Залишилась ще #[span.amount #[span 1] спроба]
         .sam__firstWin-btn.btn Крути ще
     .sam__secondWin.hide
       .sam__secondWin-info
         .sam__secondWin-title Алоха, ти виграв!
-        .sam__secondWin-sum 4500₴ #[br] 150 FS
+        .sam__secondWin-sum 4500₴ #[br] 100 FS
         .sam__secondWin-try Реєструйся, бонус та фріспіни на твоєму рахунку
-        a(href="https://www.favbet.com/short-register?action=/casino").sam__secondWin-btn.btn Забирай бонус
+        a(href="https://tds.favbet.partners").sam__secondWin-btn.btn Забирай бонус
         .sam__secondWin-rules Правила та умови
     .sam__rules.hide
       .sam__rules-close
@@ -32,13 +32,13 @@
           li.sam__rules-txt-item Бонус «Ставка без ризику» – страхування** ставки на суму до 500 UAH нараховується автоматично і без додаткових умов.
         .sam__rules-txt-more
           | Детальніше про бонус на депозит 4500 тут: #[br]
-          a(href="https://www.favbet.com/promos/promo/new_welcome/" target="_blank") https://www.favbet.com/promos/promo/new_welcome/
-      a(href="https://www.favbet.com/short-register?action=/casino").sam__rules-btn.btn Забирай бонус
+          a(href="https://www.favbet.ua/uk/promos/promo/new_welcome/" target="_blank") https://www.favbet.com/promos/promo/new_welcome/
+      a(href="https://tds.favbet.partners").sam__rules-btn.btn Забирай бонус
   .sam__main
     .sam__main-logo
     .sam__main-btns
-      a(href="https://www.favbet.com/uk/login/" target="_blank").sam__main-btns-login Вхід
-      a(href="https://www.favbet.com/uk/short-register/" target="_blank").sam__main-btns-reg.btn Реєстрація
+      a(href="https://www.favbet.ua/uk/login" target="_blank").sam__main-btns-login Вхід
+      a(href="https://tds.favbet.partners" target="_blank").sam__main-btns-reg.btn Реєстрація
     .sam__main-lampsLight
     .sam__main-lamps
     .sam__main-wrapper
@@ -58,7 +58,9 @@
           .sam__main-wheel-reel.position
           .sam__main-wheel-light.position
           .sam__main-wheel-bottom.position
-      .sam__main-txt Крути колесо — забирай бонуси
+      .sam__main-txt
+        .sam__main-txt-top Крути колесо — забирай бонуси
+        .sam__main-txt-bottom *Про умови Акції “Вітальний бонус” можеш дізнатись на сайті <a href='https://www.favbet.ua/uk/promos/promo/new_welcome/'>favbet.ua.</a> Період Акції з 24.01.2023 по 31.12.2023 року. Бонус доступний тільки для нових клієнтів.
     .sam__main-video
       video(autoplay muted loop).sam__main-video-bg
   .sam__infoMob
@@ -72,20 +74,27 @@
       .sam__infoMob-txt-title Правила та умови
       ul.sam__infoMob-txt-list
         li.sam__infoMob-txt-item Крути колесо
-        li.sam__infoMob-txt-item Вигравай бонус
+        li.sam__infoMob-txt-item Вигравай можливість отримати бонус
         li.sam__infoMob-txt-item Реєструйся та роби депозит
-        li.sam__infoMob-txt-item Бонус на твоєму рахунку!
-      .sam__infoMob-txt-more Детальніше
-  .sam__footer
-      .sam__footer-rules Правила та умови
-      .sam__footer-icons
-        .sam__footer-icons-wrap
-          .sam__footer-icons-age
-          .sam__footer-icons-applePay
-          .sam__footer-icons-googlePay
-          .sam__footer-icons-visa
-          .sam__footer-icons-mcard
-        .sam__footer-icons-wrap
-          a(href="https://app.appsflyer.com/id1076305677?af_cost_model=CPI&pid=prilamedibuy&af_sub1=2885&af_sub2=1858&af_sub3=yarmola_land4500_&af_sub4=141&af_click_lookback=7d" target="_blank").sam__footer-icons-apple
-          a(href="https://www.favbet.com/static/media/android-files/version3/Favbet_v.3.0.27.apk" target="_blank").sam__footer-icons-google
-  .sam__legal УЧАСТЬ В АЗАРТНИХ ІГРАХ МОЖЕ ВИКЛИКАТИ ІГРОВУ ЗАЛЕЖНІСТЬ. ДОТРИМУЙТЕСЯ ПРАВИЛ (ПРИНЦИПІВ) ВІДПОВІДАЛЬНОЇ ГРИ
+        li.sam__infoMob-txt-item Отримуй відповідний бонус
+      a(href='https://www.favbet.ua/uk/promos/promo/new_welcome/').sam__infoMob-txt-more Детальніше
+    .sam__infoMob-rules *Про умови Акції “Вітальний бонус” можеш дізнатись на сайті <a href='https://www.favbet.ua/uk/promos/promo/new_welcome/'>favbet.ua.</a> Період Акції з 24.01.2023 по 31.12.2023 року. Бонус доступний тільки для нових клієнтів.
+.sam__footer
+  .sam__footer-row
+    .sam__footer-text Ліцензія на провадження діяльності з організації та проведення азартних ігор казино в мережі Інтернет від 20.04.2021 року, видана ТОВ «БК «ФАВБЕТ» на підставі Рішення КРАІЛ від 05.04.2021 року за №137 із змінами та Ліцензія на провадження діяльності з організації та проведення букмекерської діяльності від 28.12.2022 року, видана ТОВ «БК «ФАВБЕТ» на підставі Рішення КРАІЛ від 13.12.2022 року за № 433
+    .sam__footer-info
+      .sam__footer-info-licensed
+        img(src='img/21+.svg' alt='21+').sam__footer-info-licensed-one.sam__footer-info-licensed-img
+        img(src='img/applePay.svg' alt='applePay').sam__footer-info-licensed-two.sam__footer-info-licensed-img
+        img(src='img/googlePay.svg' alt='googlePay').sam__footer-info-licensed-three.sam__footer-info-licensed-img
+        img(src='img/visa.svg' alt='visa').sam__footer-info-licensed-fourth.sam__footer-info-licensed-img
+        img(src='img/mastercard.svg' alt='mastercard').sam__footer-info-licensed-five.sam__footer-info-licensed-img
+      .sam__footer-info-buttons
+        a(href='https://apps.apple.com/ua/app/favbet-ua/id1580749519' aria-label='link-appStore' target="_blank").sam__footer-info-buttons-apple
+          img(src='img/appleBtn.png' alt='apple-store')
+        a(href='https://favbet.ua/minio/android-files/FavbetUA.apk' aria-label='link-googleStore' target="_blank").sam__footer-info-buttons-google
+          img(src='img/googleBtn.svg' alt='google-store')
+
+.sam__legal УЧАСТЬ В АЗАРТНИХ ІГРАХ МОЖЕ ВИКЛИКАТИ ІГРОВУ ЗАЛЕЖНІСТЬ. ДОТРИМУЙТЕСЯ ПРАВИЛ (ПРИНЦИПІВ) ВІДПОВІДАЛЬНОЇ ГРИ
+.sam__legal-desc
+  .sam__legal-desc-wrap
