--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -32,7 +32,7 @@
           li.sam__rules-txt-item Бонус «Ставка без ризику» – страхування** ставки на суму до 500 UAH нараховується автоматично і без додаткових умов.
         .sam__rules-txt-more
           | Детальніше про бонус на депозит 4500 тут: #[br]
-          a(href="https://www.favbet.ua/uk/promos/promo/new_welcome/" target="_blank") https://www.favbet.com/promos/promo/new_welcome/
+          a(href="https://www.favbet.ua/uk/promos/promo/new_welcome/" target="_blank") https://www.favbet.ua/uk/promos/promo/new_welcome/
       a(href="https://tds.favbet.partners").sam__rules-btn.btn Забирай бонус
   .sam__main
     .sam__main-logo
@@ -59,8 +59,8 @@
           .sam__main-wheel-light.position
           .sam__main-wheel-bottom.position
       .sam__main-txt
-        .sam__main-txt-top Крути колесо — забирай бонуси
-        .sam__main-txt-bottom *Про умови Акції “Вітальний бонус” можеш дізнатись на сайті <a href='https://www.favbet.ua/uk/promos/promo/new_welcome/'>favbet.ua.</a> Період Акції з 24.01.2023 по 31.12.2023 року. Бонус доступний тільки для нових клієнтів.
+        .sam__main-txt-top Крути колесо — забирай бонуси#[span *]
+        .sam__main-txt-bottom *Про умови Акції “Вітальний бонус” можеш дізнатись на сайті <a href='https://www.favbet.ua/uk/promos/promo/new_welcome/'>favbet.ua.</a> Період Акції з 01.02.2023 по 31.12.2023 року. Бонус доступний тільки для нових клієнтів.
     .sam__main-video
       video(autoplay muted loop).sam__main-video-bg
   .sam__infoMob
@@ -77,8 +77,8 @@
         li.sam__infoMob-txt-item Вигравай можливість отримати бонус
         li.sam__infoMob-txt-item Реєструйся та роби депозит
         li.sam__infoMob-txt-item Отримуй відповідний бонус
-      a(href='https://www.favbet.ua/uk/promos/promo/new_welcome/').sam__infoMob-txt-more Детальніше
-    .sam__infoMob-rules *Про умови Акції “Вітальний бонус” можеш дізнатись на сайті <a href='https://www.favbet.ua/uk/promos/promo/new_welcome/'>favbet.ua.</a> Період Акції з 24.01.2023 по 31.12.2023 року. Бонус доступний тільки для нових клієнтів.
+      .sam__infoMob-txt-more Детальніше
+    .sam__infoMob-rules *Про умови Акції “Вітальний бонус” можеш дізнатись на сайті <a href='https://www.favbet.ua/uk/promos/promo/new_welcome/'>favbet.ua.</a> Період Акції з 01.02.2023 по 31.12.2023 року. Бонус доступний тільки для нових клієнтів.
 .sam__footer
   .sam__footer-row
     .sam__footer-text Ліцензія на провадження діяльності з організації та проведення азартних ігор казино в мережі Інтернет від 20.04.2021 року, видана ТОВ «БК «ФАВБЕТ» на підставі Рішення КРАІЛ від 05.04.2021 року за №137 із змінами та Ліцензія на провадження діяльності з організації та проведення букмекерської діяльності від 28.12.2022 року, видана ТОВ «БК «ФАВБЕТ» на підставі Рішення КРАІЛ від 13.12.2022 року за № 433
