--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -325,6 +325,7 @@ body
     &-wheel
       width: 725px
       height: 868px
+      bottom: -40px
       position: relative
       flex-shrink: 0
       &-wrap
@@ -417,6 +418,13 @@ body
         letter-spacing: 0.03em
         width: 390px
         margin: 0 0 40px 0
+        span
+          font-family: $font-suisse-reg
+          font-size: 48px
+          line-height: 48px
+          position: relative
+          top: -18px
+          left: 4px
       &-bottom
         width: 367px
         font-family: $font-suisse-reg
