--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -22,6 +22,9 @@
           font-size: 85px
           line-height: 94px
           width: 500px
+          span
+            top: -28px
+            left: 4px
 
 @media screen and (max-width: 1920px) and (max-height: 1050px)
   .sam
@@ -43,6 +46,8 @@
           font-size: 58px
           line-height: 66px
           width: 350px
+          span
+            font-size: 38px
 
 @media screen and (max-width: 1680px) and (max-height: 950px)
   .sam
@@ -115,6 +120,9 @@
         &-top
           font-size: 50px
           line-height: 60px
+          span
+            font-size: 30px
+            line-height: 30px
         &-bottom
           width: 273px
           font-size: 13px
@@ -213,6 +221,9 @@
           font-size: 46px
           line-height: 52px
           width: 290px
+          span
+            font-size: 28px
+            line-height: 28px
         &-bottom
           width: 253px
           font-size: 13px
@@ -283,6 +294,10 @@
           line-height: 46px
           width: 250px
           margin: 0 0 30px 0
+          span
+            font-size: 25px
+            line-height: 25px
+            top: -13px
         &-bottom
           width: 233px
           font-size: 11px
@@ -338,6 +353,8 @@
           font-size: 44px
           line-height: 50px
           width: 270px
+          span
+            top: -14px
         &-bottom
           width: 248px
           font-size: 12px
@@ -395,6 +412,10 @@
           font-size: 38px
           line-height: 44px
           width: 240px
+          span
+            top: -15px
+            font-size: 20px
+            line-height: 20px
         &-bottom
           width: 231px
           font-size: 11px
@@ -570,6 +591,9 @@
           line-height: 42px
           width: 230px
           margin: 0 0 20px 0
+          span
+            font-size: 24px
+            top: -12px
         &-bottom
           width: 196px
           font-size: 10px
@@ -695,6 +719,10 @@
         &-top
           font-size: 45px
           line-height: 50px
+          span
+            font-size: 28px
+            line-height: 28px
+            top: -16px
 
 
 @media screen and (max-width: 900px) and (max-height: 1050px)
@@ -847,9 +875,10 @@
         right: 0
         z-index: 2
       &-rules
+        padding: 0 15px
         position: relative
         z-index: 3
-        max-width: 370px
+        max-width: 400px
         text-align: center
         font-family: $font-suisse-reg
         font-size: 12px
@@ -978,6 +1007,7 @@
 
 @media screen and (max-width: 699px) and (orientation: portrait)
   .sam
+
     &__rules
       background: url("../img/popup-small.png") no-repeat 0 0/contain
       width: 311px
@@ -993,7 +1023,7 @@
         bottom: 62px
         left: 58px
         right: 54px
-        padding-right: 20px
+        padding-right: 15px
         &-title
           font-size: 15px
           line-height: 19px
@@ -1024,6 +1054,7 @@
         padding: 16px 8px 0 0
         &-login,
         &-reg
+          border-radius: 2px
           font-size: 8px
           padding: 8px 15px 5px
         &-login
@@ -1064,9 +1095,23 @@
         &-top
           font-size: 25px
           line-height: 27px
+          span
+            font-size: 18px
+            line-height: 18px
+            top: -8px
     &__infoMob
       padding-bottom: 20px
       margin-top: -152px
+      &-rules
+        &::before
+          content: ''
+          position: absolute
+          z-index: -1
+          width: 10000%
+          height: 122px
+          left: -100%
+          bottom: 20px
+          background: linear-gradient(360deg, #0D1630 9.75%, rgba(13, 22, 48, 0) 100%)
       &-coala
         height: 235px
         left: -4px
@@ -1085,18 +1130,22 @@
         height: 236px
         top: 52px
       &-leaf-3
+        bottom: 41px
         width: 136px
         height: 155px
       &-leaf-4
+        bottom: 41px
         width: 116px
         height: 132px
       &-txt
         width: 324px
         height: 435px
-        padding: 66px 65px 20px
+        padding: 66px 46px 20px
+        margin: 0
         &-title
           font-size: 24px
           line-height: 24px
+          max-width: 160px
         &-list
           margin: 25px 0 0 27px
         &-item
@@ -1109,8 +1158,8 @@
             top: 6px
             left: -15px
         &-more
+          margin-top: 20px
           font-size: 13px
-          margin-top: 41px
 
 @media screen and (max-width: 600px) and (orientation: portrait)
   .sam
@@ -1260,7 +1309,7 @@
       &-txt
         right: -105px
 
-@media screen and (max-width: 920px) and (orientation: landscape)
+@media screen and (max-width: 920px) and (orientation: landscape) and (max-height: 450px)
   .sam
     &__firstWin,
     &__secondWin
@@ -1340,6 +1389,7 @@
         padding: 10px 10px 0 0
         &-login,
         &-reg
+          border-radius: 2px
           font-size: 11px
         &-reg
           padding: 10px 18px 6px
@@ -1348,6 +1398,7 @@
       &-left
         width: 210px
         left: 70px
+        bottom: -22px
         &-try
           width: 110px
           height: 75px
@@ -1363,21 +1414,33 @@
         &-light
           animation: none
       &-txt
-        top: 365px
-        right: 40px
+        top: 369px
+        right: 51px
         &-top
           font-size: 26px
           line-height: 32px
           width: 160px
+          margin: 0 0 10px 0
+          span
+            font-size: 14px
+            top: -10px
+        &-bottom
+          width: 150px
+          font-size: 7px
+          line-height: 10px
+          a
+            font-size: 7px
+            line-height: 10px
 
       &-wrapper
-        bottom: 37px
+        bottom: 83px
 
-@media screen and (max-width: 920px) and (max-height: 450px)
+@media screen and (max-width: 920px) and (max-height: 450px) and (orientation: landscape)
   .sam
     &__legal-desc
       display: none
     &__legal
+      white-space: nowrap
       padding: 0 15px
       font-size: 2.5vw
       line-height: 10px
@@ -1393,6 +1456,23 @@
       &-info
         transform-origin: right center
         transform: scale(0.8)
+
+@media screen and (max-width: 920px) and (orientation: landscape) and (max-height: 390px)
+  .sam
+    &__main
+      &-left
+        width: 170px
+        left: 110px
+        &-try
+          top: -45px
+          span
+            font-size: 12px
+            line-height: 12px
+          .try-number
+            margin-left: 8px
+      &-wheel
+        transform: scale(0.3)
+        margin-bottom: -290px
 
 
 @media screen and (max-width: 780px) and (orientation: landscape)
@@ -1431,6 +1511,8 @@
       &-txt
         right: 60px
 
+
+
 @media screen and (max-width: 670px) and (orientation: landscape) and (max-height: 420px)
   .sam
     &__main
@@ -1438,7 +1520,24 @@
         transform: scale(0.27)
         margin-bottom: -300px
       &-left
-        transform: scale(0.67)
+        transform: scale(0.8)
+        left: 110px
+        bottom: -34px
+
+@media screen and (max-width: 670px) and (orientation: landscape) and (max-height: 340px)
+  .sam
+    &__main
+      &-wheel
+        transform: scale(0.23)
+        margin-bottom: -315px
+      &-left
+        transform: scale(0.65)
+        left: 130px
+        bottom: -51px
+      &-txt
+        transform-origin: left center
+        transform: scale(.85)
+        right: 87px
 
 @media screen and (max-width: 640px) and (orientation: landscape)
   .sam
@@ -1455,7 +1554,7 @@
         font-size: 6px
         line-height: 13px
 
-@media screen and (max-width: 570px) and (orientation: landscape)
+@media screen and (max-width: 595px) and (orientation: landscape)
   .sam
     &__main
       &-logo
@@ -1473,6 +1572,17 @@
         margin-bottom: -300px
       &-txt
         right: 90px
+        transform-origin: left center
+        transform: scale(.9)
+
+@media screen and (max-width: 575px) and (orientation: landscape) and (max-height: 345px)
+  .sam
+    &__main
+      &-wheel
+        transform: scale(0.23)
+        margin-bottom: -314px
+      &-txt
+        transform: scale(0.8)
 
 @media screen and (max-height: 280px)
   .sam
