--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -9,7 +9,7 @@
     .sam__secondWin.hide
       .sam__secondWin-info
         .sam__secondWin-title Алоха, ти виграв!
-        .sam__secondWin-sum 4500₴ #[br] 100 FS
+        .sam__secondWin-sum  #[span до]4500₴ #[br] 100 FS
         .sam__secondWin-try Реєструйся, бонус та фріспіни на твоєму рахунку
         a(href="https://tds.favbet.partners").sam__secondWin-btn.btn Забирай бонус
         .sam__secondWin-rules Правила та умови
@@ -60,25 +60,14 @@
           .sam__main-wheel-bottom.position
       .sam__main-txt
         .sam__main-txt-top Крути колесо — забирай бонуси#[span *]
-        .sam__main-txt-bottom *Про умови Акції “Вітальний бонус” можеш дізнатись на сайті <a href='https://www.favbet.ua/uk/promos/promo/new_welcome/'>favbet.ua.</a> Період Акції з 01.02.2023 по 31.12.2023 року. Бонус доступний тільки для нових клієнтів.
+        .sam__main-txt-bottom *Під бонусом розуміється можливість отримати приз в рамках Акції “Вітальний бонус”. Деталі на сайті <a href='https://www.favbet.ua/uk/promos/promo/new_welcome/'>favbet.ua.</a> Період Акції з 01.02.2023 по 31.12.2023 року. Бонус доступний тільки для нових клієнтів.
     .sam__main-video
       video(autoplay muted loop).sam__main-video-bg
   .sam__infoMob
     .sam__infoMob-coala
-    .sam__infoMob-arrow
-    .sam__infoMob-leaf-1
-    .sam__infoMob-leaf-2
     .sam__infoMob-leaf-3
     .sam__infoMob-leaf-4
-    .sam__infoMob-txt
-      .sam__infoMob-txt-title Правила та умови
-      ul.sam__infoMob-txt-list
-        li.sam__infoMob-txt-item Крути колесо
-        li.sam__infoMob-txt-item Вигравай можливість отримати бонус
-        li.sam__infoMob-txt-item Реєструйся та роби депозит
-        li.sam__infoMob-txt-item Отримуй відповідний бонус
-      .sam__infoMob-txt-more Детальніше
-    .sam__infoMob-rules *Про умови Акції “Вітальний бонус” можеш дізнатись на сайті <a href='https://www.favbet.ua/uk/promos/promo/new_welcome/'>favbet.ua.</a> Період Акції з 01.02.2023 по 31.12.2023 року. Бонус доступний тільки для нових клієнтів.
+    .sam__infoMob-rules *Під бонусом розуміється можливість отримати приз в рамках Акції “Вітальний бонус”. Деталі на сайті <a href='https://www.favbet.ua/uk/promos/promo/new_welcome/'>favbet.ua.</a> Період Акції з 01.02.2023 по 31.12.2023 року. Бонус доступний тільки для нових клієнтів.
 .sam__footer
   .sam__footer-row
     .sam__footer-text Ліцензія на провадження діяльності з організації та проведення азартних ігор казино в мережі Інтернет від 20.04.2021 року, видана ТОВ «БК «ФАВБЕТ» на підставі Рішення КРАІЛ від 05.04.2021 року за №137 із змінами та Ліцензія на провадження діяльності з організації та проведення букмекерської діяльності від 28.12.2022 року, видана ТОВ «БК «ФАВБЕТ» на підставі Рішення КРАІЛ від 13.12.2022 року за № 433
