--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -6,6 +6,13 @@
         transform-origin: right center
         transform: scale(1.3)
 
+
+@media screen and (min-width: 2200px)
+  .sam
+    &__legal-desc
+      height: 205px
+
+
 @media screen and (min-width: 2450px)
   .sam
     &__main
@@ -170,7 +177,7 @@
   .sam
     &__main
       &-logo
-        width: 340px
+        width: 300px
         height: 112px
       &-btns
         padding: 20px 20px 0 0
@@ -318,9 +325,9 @@
         background: none
     &__legal
       display: flex
-      height: 114px
-      font-size: 4.05vw
-      line-height: 51px
+      height: 154px
+      font-size: 4.75vw
+      line-height: 62px
       text-align: center
 
 @media screen and (max-width: 1280px)
@@ -366,7 +373,7 @@
   .sam
     &__main
       &-logo
-        width: 370px
+        width: 330px
         height: 121px
       &-btns
         padding: 20px 20px 0 0
@@ -397,7 +404,7 @@
   .sam
     &__main
       &-logo
-        width: 320px
+        width: 280px
         height: 105px
       &-left
         width: 300px
@@ -506,14 +513,16 @@
       &-info
         top: 70px
         bottom: 70px
-      &-sum
-        font-size: 44px
-        line-height: 44px
+
       &-try
         font-size: 12px
         line-height: 16px
       &-btn
         font-size: 14px
+    &__firstWin
+      &-sum
+        font-size: 44px
+        line-height: 44px
     &__secondWin
       &-info
         top: 60px
@@ -560,7 +569,7 @@
   .sam
     &__main
       &-logo
-        width: 280px
+        width: 260px
         height: 92px
       &-btns
         &-login,
@@ -676,21 +685,23 @@
       &-info
         top: 70px
         bottom: 70px
-      &-sum
-        font-size: 44px
-        line-height: 44px
+
       &-try
         font-size: 12px
         line-height: 16px
       &-btn
         font-size: 14px
+    &__firstWin
+      &-sum
+        font-size: 44px
+        line-height: 44px
     &__secondWin
       &-info
         top: 60px
         bottom: 60px
     &__main
       &-logo
-        width: 340px
+        width: 300px
         height: 112px
       &-btns
         padding: 20px 20px 0 0
@@ -754,7 +765,7 @@
         left: 0
         right: 0
       &-logo
-        width: 335px
+        width: 280px
         height: 110px
       &-btns
         padding: 28px 15px 0 0
@@ -791,6 +802,8 @@
           width: 170px
           height: 118px
           position: static
+          transform-origin: top center
+          transform: translate(30px, -50px)
           span
             font-size: 20px
             line-height: 22px
@@ -803,6 +816,7 @@
       &-video
         display: none
     &__infoMob
+      pointer-events: none
       display: flex
       flex-direction: column
       align-items: center
@@ -830,46 +844,25 @@
         height: 70px
       &-coala
         background: url("../img/coala-mob.png") no-repeat 0 0/contain
-        width: 312px
-        height: 387px
+        width: 380px
+        height: 475px
         position: absolute
-        bottom: 92%
+        bottom: 30%
         left: 0
         z-index: 1
-      &-arrow
-        background: url("../img/arrow-bonus.png") no-repeat 0 0/contain
-        width: 158px
-        height: 104px
-        position: absolute
-        top: -132px
-        right: 30px
-      &-leaf-1
-        background: url("../img/leaf-tl.png") no-repeat 0 0/contain
-        width: 285px
-        height: 409px
-        position: absolute
-        top: 0
-        left: 0
-        z-index: 1
-      &-leaf-2
-        background: url("../img/leaf-tr.png") no-repeat 0 0/contain
-        width: 251px
-        height: 424px
-        position: absolute
-        top: 96px
-        right: 0
+
       &-leaf-3
         background: url("../img/leaf-bl.png") no-repeat 0 0/contain
         width: 247px
         height: 283px
         position: absolute
         bottom: 0
-        left: 0
+        left: -30px
         z-index: 2
       &-leaf-4
         background: url("../img/leaf-br.png") no-repeat 0 0/contain
-        width: 208px
-        height: 240px
+        width: 218px
+        height: 250px
         position: absolute
         bottom: 0
         right: 0
@@ -887,57 +880,7 @@
         a
           color: $white
           text-decoration: underline
-      &-txt
-        background: url("../img/popup-small.png") no-repeat 0 0/contain
-        display: flex
-        flex-direction: column
-        align-items: center
-        width: 583px
-        height: 783px
-        padding: 128px 15px 120px
-        z-index: 1
-        margin: 0 0 20px 0
-        &-title
-          font-family: $font-suisse-semb
-          font-size: 40px
-          line-height: 43px
-          color: $text
-          letter-spacing: 0.03em
-          text-align: center
-        &-list
-          margin-top: 60px
-          margin-right: -45px
-          max-width: 340px
-        &-item
-          font-family: $font-suisse-reg
-          font-size: 28px
-          line-height: 33px
-          color: $text
-          letter-spacing: 0.03em
-          margin-bottom: 29px
-          position: relative
-          &:before
-            content: ""
-            background: $magenta
-            width: 12px
-            height: 12px
-            position: absolute
-            top: 10px
-            left: -25px
-          &:last-child
-            margin-bottom: 0
-        &-more
-          display: block
-          text-align: center
-          margin-top: 45px
-          font-family: $font-suisse-semb
-          font-size: 22px
-          text-transform: uppercase
-          color: $magenta
-          letter-spacing: 0.08em
-          text-decoration: underline
-          &:hover
-            text-decoration: none
+
     &__footer
         position: static
         min-height: 110px
@@ -984,10 +927,44 @@
       &-left
         &-try
           transform-origin: top center
-          transform: scale(1.2) translate(50px, -50px)
+          transform: scale(1.2) translate(50px, -90px)
     &__infoMob
       &-coala
         transform: scale(1.2)
+
+@media screen and (max-width: 840px) and (orientation: portrait)
+  .sam
+    &__infoMob
+      &-coala
+        bottom: 0
+      &-leaf-3
+        width: 218px
+        height: 237px
+      &-leaf-4
+        width: 186px
+        height: 216px
+    &__main
+      &-left
+        &-try
+          transform: translate(30px, -10px)
+
+@media screen and (max-width: 800px) and (orientation: portrait)
+  .sam
+    &__infoMob
+      &-coala
+        bottom: 0
+        width: 323px
+        height: 382px
+      &-leaf-3
+        width: 177px
+        height: 183px
+      &-leaf-4
+        width: 147px
+        height: 170px
+    &__main
+      &-left
+        &-try
+          transform: translate(0px, 70px)
 
 @media screen and (max-width: 760px) and (orientation: portrait)
   .sam
@@ -1116,19 +1093,7 @@
         height: 235px
         left: -4px
         bottom: 89%
-      &-arrow
-        width: 93px
-        height: 62px
-        top: -70px
-        right: 22px
-      &-leaf-1
-        width: 159px
-        height: 229px
-        top: -7px
-      &-leaf-2
-        width: 142px
-        height: 236px
-        top: 52px
+
       &-leaf-3
         bottom: 41px
         width: 136px
@@ -1137,29 +1102,7 @@
         bottom: 41px
         width: 116px
         height: 132px
-      &-txt
-        width: 324px
-        height: 435px
-        padding: 66px 46px 20px
-        margin: 0
-        &-title
-          font-size: 24px
-          line-height: 24px
-          max-width: 160px
-        &-list
-          margin: 25px 0 0 27px
-        &-item
-          font-size: 18px
-          line-height: 20px
-          margin-bottom: 15px
-          &:before
-            width: 7px
-            height: 7px
-            top: 6px
-            left: -15px
-        &-more
-          margin-top: 20px
-          font-size: 13px
+
 
 @media screen and (max-width: 600px) and (orientation: portrait)
   .sam
@@ -1200,18 +1143,28 @@
         margin: 0 auto
     &__legal
       position: static
-      min-height: 113px
+      min-height: 140px
       font-size: 6.4vw
-      line-height: 28px
+      line-height: 32px
       padding: 0 19px
 
 @media screen and (max-width: 445px) and (orientation: portrait)
   .sam
     &__main
       background-size: contain
+      padding: 0 0 61px 0
+      &-wheel
+        margin-bottom: -82px
+      &-left
+        &-try
+          transform: translate(10px, -30px)
     &__infoMob
       &:before
-        height: 110px
+        height: 187px
+      &-coala
+        left: -14px
+
+
 
 @media screen and (max-width: 360px) and (orientation: portrait)
   .sam
@@ -1222,6 +1175,8 @@
       &-left
         bottom: 340px
         left: -15px
+        &-try
+          transform: translate(15px, -20px)
     &__infoMob
       margin-top: -170px
       &-coala
@@ -1229,8 +1184,7 @@
         height: 200px
         left: -14px
         bottom: 94%
-      &-arrow
-        top: -63px
+
 
 @media screen and (max-width: 340px) and (orientation: portrait)
   .sam
@@ -1286,14 +1240,9 @@
     &__infoMob
       margin-top: -190px
       &:before
-        height: 80px
+        height: 125px
       &-coala
         height: 170px
-      &-arrow
-        top: -50px
-        right: 10px
-        width: 80px
-        height: 52px
       &-leaf-3
         width: 101px
         height: 115px
@@ -1341,6 +1290,21 @@
       &-rules
         font-size: 12px
         line-height: 14px
+    &__secondWin
+      &-try
+        margin: 1px 0 auto
+      &-sum
+        line-height: 45px
+        margin-left: 0
+        span
+          font-size: 14px
+          line-height: 31px
+        &:before
+          font-size: 16px
+          line-height: 25px
+          top: 31px
+          left: 62px
+
     &__rules
       width: 400px
       height: 300px
@@ -1440,11 +1404,10 @@
     &__legal-desc
       display: none
     &__legal
-      white-space: nowrap
       padding: 0 15px
-      font-size: 2.5vw
-      line-height: 10px
-      height: 44px
+      font-size: 3.5vw
+      line-height: 30px
+      height: 88px
     &__footer
       bottom: 0
       padding: 0 15px
