--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -116,17 +116,23 @@ body
       bottom: 68px
     &-sum
       font-size: 47px
+      line-height: 75px
       position: relative
-      margin-left: 40px
+      text-align: center
+      span
+        font-family: $font-suisse-bold
+        font-size: 24px
+        line-height: 31px
+        margin: 0 5px 0 0
       &:before
         content: "+"
         font-family: $font-suisse-bold
-        font-size: 47px
-        line-height: 47px
+        font-size: 32px
+        line-height: 32px
         color: $magenta
         position: absolute
-        top: 23px
-        left: -38px
+        top: 53px
+        left: 92px
     &-rules
       font-family: $font-suisse-semb
       font-size: 14px
@@ -250,7 +256,7 @@ body
         object-fit: cover
     &-logo
       background: url("../img/logo.svg") no-repeat 0 0/contain
-      width: 437px
+      width: 400px
       height: 143px
       position: absolute
       top: 0
@@ -500,7 +506,7 @@ body
     padding: 0 23px
     z-index: 5
     width: 100%
-    height: 160px
+    height: 170px
     background: #ffffff
     &-wrap
       width: 100%
