--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -2,38 +2,17 @@
   .sam__overlay.opacity-overlay
     .sam__firstWin.hide
       .sam__firstWin-info
-        .sam__firstWin-title Алоха, ти виграв#[br] фріспіни
+        .sam__firstWin-title Алоха, ти виграв#[br] можливість отримати фріспіни:
         .sam__firstWin-sum 100 FS
         .sam__firstWin-try Залишилась ще #[span.amount #[span 1] спроба]
         .sam__firstWin-btn.btn Крути ще
     .sam__secondWin.hide
       .sam__secondWin-info
-        .sam__secondWin-title Алоха, ти виграв!
+        .sam__secondWin-title Алоха, ти виграв#[br] можливість отримати бонус:
         .sam__secondWin-sum  #[span до]4500₴ #[br] 100 FS
         .sam__secondWin-try Реєструйся, бонус та фріспіни на твоєму рахунку
         a(href="https://tds.favbet.partners").sam__secondWin-btn.btn Забирай бонус
-        .sam__secondWin-rules Правила та умови
-    .sam__rules.hide
-      .sam__rules-close
-      .sam__rules-txt
-        .sam__rules-txt-title Як отримати Фріспіни?
-        ul.sam__rules-txt-list
-          li.sam__rules-txt-item Зроби депозит від 150 UAH.
-          li.sam__rules-txt-item В особистому кабінеті у розділі “Бонуси” у вкладці “Фріспіни” натисни кнопку «Старт».
-          li.sam__rules-txt-item Зроби будь-яку ставку.
-          li.sam__rules-txt-item Як тільки ставку зроблено — натисни «Прийняти» та забирай спіни.
-        .sam__rules-txt-info Бонусна пропозиція дійсна протягом 5 днів.
-        .sam__rules-txt-title Як отримати Бонус 4500 на Депозит
-        ul.sam__rules-txt-list
-          li.sam__rules-txt-item Внеси кошти на ігровий рахунок від 100 UAH.
-          li.sam__rules-txt-item Натисни "Старт" протягом 48 годин після поповнення рахунку, щоб активувати грошовий бонус у розмірі 100% від суми депозиту. В тебе буде 10 днів, щоб відіграти бонус.
-          li.sam__rules-txt-item Виконай умови бонусу та прийми його в “Особистому кабінеті”.
-          li.sam__rules-txt-item Після прийняття бонусу він зарахується на твій ігровий гаманець.
-          li.sam__rules-txt-item Бонус «Ставка без ризику» – страхування** ставки на суму до 500 UAH нараховується автоматично і без додаткових умов.
-        .sam__rules-txt-more
-          | Детальніше про бонус на депозит 4500 тут: #[br]
-          a(href="https://www.favbet.ua/uk/promos/promo/new_welcome/" target="_blank") https://www.favbet.ua/uk/promos/promo/new_welcome/
-      a(href="https://tds.favbet.partners").sam__rules-btn.btn Забирай бонус
+        a(href='https://www.favbet.ua/uk/promos/promo/new_welcome/').sam__secondWin-rules Правила та умови
   .sam__main
     .sam__main-logo
     .sam__main-btns
