--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -147,25 +147,6 @@
 
 @media screen and (max-width: 1600px) and (max-height: 800px)
   .sam
-    &__rules
-      width: 800px
-      height: 597px
-      &-close
-        width: 42px
-        height: 42px
-        top: 28px
-        right: 20px
-        &:before,
-        &:after
-          height: 22px
-      &-txt
-        top: 130px
-        bottom: 121px
-        left: 130px
-        right: 130px
-    .popup-win
-      .sam__rules-btn
-        left: 130px
     &__main
       &-wheel
         transform: scale(0.75)
@@ -261,23 +242,6 @@
 
 @media screen and (max-width: 1366px) and (max-height: 745px)
   .sam
-    &__rules
-      width: 700px
-      height: 522px
-      &-close
-        top: 19px
-        right: 15px
-      &-txt
-        top: 110px
-        bottom: 110px
-        left: 110px
-        right: 110px
-    .popup-win
-      .sam__rules-txt
-        bottom: 170px
-      .sam__rules-btn
-        left: 110px
-        bottom: 100px
     &__main
       &-left
         width: 310px
@@ -483,29 +447,6 @@
 
 @media screen and (max-height: 600px)
   .sam
-    &__rules
-      width: 630px
-      height: 470px
-      &-close
-        width: 35px
-        height: 35px
-        top: 21px
-        right: 15px
-        &:before,
-        &:after
-          width: 3px
-          height: 17px
-      &-txt
-        top: 100px
-        bottom: 100px
-        left: 90px
-        right: 90px
-    .popup-win
-      .sam__rules-txt
-        bottom: 170px
-      .sam__rules-btn
-        left: 90px
-        bottom: 90px
     &__firstWin,
     &__secondWin
       width: 320px
@@ -518,6 +459,7 @@
         font-size: 12px
         line-height: 16px
       &-btn
+        margin-bottom: 10px
         font-size: 14px
     &__firstWin
       &-sum
@@ -655,29 +597,6 @@
 
 @media screen and (max-width: 900px) and (orientation: portrait)
   .sam
-    &__rules
-      width: 630px
-      height: 470px
-      &-close
-        width: 35px
-        height: 35px
-        top: 21px
-        right: 15px
-        &:before,
-        &:after
-          width: 3px
-          height: 17px
-      &-txt
-        top: 100px
-        bottom: 100px
-        left: 90px
-        right: 90px
-    .popup-win
-      .sam__rules-txt
-        bottom: 170px
-      .sam__rules-btn
-        left: 90px
-        bottom: 90px
     &__firstWin,
     &__secondWin
       width: 320px
@@ -984,44 +903,6 @@
 
 @media screen and (max-width: 699px) and (orientation: portrait)
   .sam
-
-    &__rules
-      background: url("../img/popup-small.png") no-repeat 0 0/contain
-      width: 311px
-      height: 415px
-      &-close
-        top: 4px
-        right: 5px
-        &:before,
-        &:after
-          height: 20px
-      &-txt
-        top: 56px
-        bottom: 62px
-        left: 58px
-        right: 54px
-        padding-right: 15px
-        &-title
-          font-size: 15px
-          line-height: 19px
-        &-list
-          margin-top: 16px
-        &-item,
-        &-more
-          font-size: 13px
-          line-height: 17px
-          margin-bottom: 12px
-        &-info
-          font-size: 14px
-          margin-bottom: 20px
-    .popup-win
-      .sam__rules-txt
-        bottom: 127px
-      .sam__rules-btn
-        font-size: 12px
-        left: 58px
-        padding: 15px 42px 13px
-        bottom: 60px
     &__main
       background-size: cover
       &-logo
@@ -1106,6 +987,13 @@
 
 @media screen and (max-width: 600px) and (orientation: portrait)
   .sam
+    &__secondWin
+      &-try
+        margin-bottom: 10px
+      &-rules
+        margin-top: 10px
+      &-btn
+        margin-bottom: 0
     &__footer
       position: static
       min-height: 335px
@@ -1150,6 +1038,7 @@
 
 @media screen and (max-width: 445px) and (orientation: portrait)
   .sam
+
     &__main
       background-size: contain
       padding: 0 0 61px 0
@@ -1168,9 +1057,6 @@
 
 @media screen and (max-width: 360px) and (orientation: portrait)
   .sam
-    &__rules
-      &-close
-        padding: 0 0 1px 1px
     &__main
       &-left
         bottom: 340px
@@ -1270,12 +1156,12 @@
         left: 40px
         right: 40px
       &-title
-        font-size: 13px
-        line-height: 16px
+        font-size: 10px
+        line-height: 12px
       &-sum
         font-size: 30px
         line-height: 30px
-        margin-left: 32px
+        margin-left: 0
         &:before
           font-size: 35px
           line-height: 35px
@@ -1291,8 +1177,17 @@
         font-size: 12px
         line-height: 14px
     &__secondWin
+      &-title
+        font-size: 9px
+        line-height: 11px
       &-try
-        margin: 1px 0 auto
+        margin: 1px 0 6px
+        font-size: 9px
+        line-height: 10px
+      &-rules
+        margin-top: 0
+        font-size: 10px
+        line-height: 13px
       &-sum
         line-height: 45px
         margin-left: 0
@@ -1304,50 +1199,13 @@
           line-height: 25px
           top: 31px
           left: 62px
-
-    &__rules
-      width: 400px
-      height: 300px
-      &-close
-        width: 28px
-        height: 28px
-        top: 10px
-        right: 7px
-      &-txt
-        top: 60px
-        bottom: 55px
-        left: 55px
-        right: 55px
-        padding-right: 20px
-        &-title
-          font-size: 18px
-          line-height: 18px
-        &-list
-          margin-top: 15px
-        &-item,
-        &-more
-          font-size: 12px
-          line-height: 16px
-          margin-bottom: 10px
-        &-info
-          font-size: 11px
-          line-height: 12px
-          margin: 10px 0 20px
-    .popup-win
-      .sam__rules-txt
-        bottom: 100px
-      .sam__rules-btn
-        left: 55px
-        bottom: 50px
-        font-size: 11px
-        padding: 10px 20px 8px
     &__main
       background: url("../img/bg.jpg") no-repeat 0 -30px
       background-size: cover
       &-video
         display: none
       &-logo
-        width: 200px
+        width: 135px
         height: 66px
       &-btns
         padding: 10px 10px 0 0
